--- a/loggingmiddleware/package.json
+++ b/loggingmiddleware/package.json
@@ -8,7 +8,8 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {}
 }
